<resources>
    <string name="app_name">MovieApp (EdwardBro)</string>
    <string name="MainText">The most popular movies of</string>
    <string name="yearText">Year</string>
    <string name="submitButton">Submit</string>
    <string name="movienumber">movieNumber</string>
    <string name="posterimage">posterImage</string>
    <string name="backgroundimage">backgroundImage</string>
    <string name="title">Title</string>
    <string name="release">Release: </string>
    <string name="releasedate">ReleaseDate</string>
    <string name="rating">Rating</string>
    <string name="overview">Overview</string>
</resources>
